# docs/swagger.json
@@ -1467,6 +1467,117 @@
                 }
             }
         },
+        "/ai_arts/api/evaluations": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "create Evaluation",
+                "parameters": [
+                    {
+                        "description": "ID:modelID ， NAME : model NAME",
+                        "name": "param",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Training"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/routers.createEvaluationResp"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    }
+                }
+            }
+        },
+        "/ai_arts/api/evaluations/:id": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get evaluation by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "evaluation id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/routers.getEvaluationReq"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "delete evaluation by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "evaluation id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APISuccessResp"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    }
+                }
+            }
+        },
         "/ai_arts/api/files/download/dataset/:id": {
             "get": {
                 "produces": [
@@ -1580,6 +1691,32 @@
                         "description": "not found",
                         "schema": {
                             "$ref": "#/definitions/routers.APIException"
+                        }
+                    }
+                }
+            }
+        },
+        "/ai_arts/api/inferences/DeleteJob": {
+            "delete": {
+                "description": "delete a inference job",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete a inference job",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "inference job Id ",
+                        "name": "jobId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APISuccessResp"
                         }
                     }
                 }
@@ -1836,6 +1973,62 @@
             }
         },
         "/ai_arts/api/models": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "list models",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page number",
+                        "name": "pageNum",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "size per page",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "the keyword of search",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "the keyword of search",
+                        "name": "status",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APISuccessRespGetModelsets"
+                        }
+                    },
+                    "400": {
+                        "description": "error",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/routers.APIException"
+                        }
+                    }
+                }
+            },
             "post": {
                 "produces": [
                     "application/json"
@@ -1893,7 +2086,7 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "$ref": "#/definitions/routers.GetModelsetResp"
+                            "$ref": "#/definitions/routers.getModelsetResp"
                         }
                     },
                     "400": {
@@ -1964,80 +2157,6 @@
                         "description": "success",
                         "schema": {
                             "$ref": "#/definitions/routers.APISuccessResp"
-                        }
-                    },
-                    "400": {
-                        "description": "error",
-                        "schema": {
-                            "$ref": "#/definitions/routers.APIException"
-                        }
-                    },
-                    "404": {
-                        "description": "not found",
-                        "schema": {
-                            "$ref": "#/definitions/routers.APIException"
-                        }
-                    }
-                }
-            }
-        },
-        "/ai_arts/api/models/:id/evaluation": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "get evaluation by modelid",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "model id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "$ref": "#/definitions/routers.getEvaluationResp"
-                        }
-                    },
-                    "400": {
-                        "description": "error",
-                        "schema": {
-                            "$ref": "#/definitions/routers.APIException"
-                        }
-                    },
-                    "404": {
-                        "description": "not found",
-                        "schema": {
-                            "$ref": "#/definitions/routers.APIException"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "create Training",
-                "parameters": [
-                    {
-                        "description": "params",
-                        "name": "param",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Training"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "$ref": "#/definitions/routers.createEvaluationResp"
                         }
                     },
                     "400": {
@@ -3465,6 +3584,21 @@
                 }
             }
         },
+        "routers.APISuccessRespGetModelsets": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "object",
+                    "$ref": "#/definitions/routers.GetModelsetsResp"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
         "routers.APISuccessRespGetResource": {
             "type": "object",
             "properties": {
@@ -3746,6 +3880,9 @@
                 },
                 "total": {
                     "type": "integer"
+                },
+                "totalPage": {
+                    "type": "integer"
                 }
             }
         },
@@ -3798,12 +3935,26 @@
                 }
             }
         },
-        "routers.GetModelsetResp": {
+        "routers.GetModelsetsResp": {
             "type": "object",
             "properties": {
-                "model": {
-                    "type": "object",
-                    "$ref": "#/definitions/models.Modelset"
+                "models": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Modelset"
+                    }
+                },
+                "pageNum": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                },
+                "totalPage": {
+                    "type": "integer"
                 }
             }
         },
@@ -4053,17 +4204,13 @@
                 }
             }
         },
-        "routers.getEvaluationResp": {
+        "routers.getEvaluationReq": {
             "type": "object",
+            "required": [
+                "id"
+            ],
             "properties": {
-                "evaluationId": {
-                    "type": "string"
-                },
-                "job": {
-                    "type": "object",
-                    "$ref": "#/definitions/models.Training"
-                },
-                "log": {
+                "id": {
                     "type": "string"
                 }
             }
@@ -4098,6 +4245,15 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "routers.getModelsetResp": {
+            "type": "object",
+            "properties": {
+                "model": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.Modelset"
                 }
             }
         },
